--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ buildscript {
     ext.kotlin_version = '1.3.41'
     ext.nav_version = '2.1.0-beta02'
     ext.glide_version = '4.9.0'
-    ext.dagger_version = '2.24'
     ext.arch_version = '1.1.1'
     ext.leakcanary_version = '1.6.3'
     ext.coroutines_version = '1.2.0'
     ext.exoplayer_version = '2.10.4'
+    ext.koin_version = '2.0.1'
     repositories {
         google()
         jcenter()
