--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.nav_version = '2.1.0-beta02'
+    ext.nav_version = '2.2.0-alpha03'
     ext.glide_version = '4.10.0'
     ext.arch_version = '1.1.1'
     ext.leakcanary_version = '1.6.3'
