--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,18 +61,18 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-beta01'
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.1.1'
-    implementation 'com.google.android:flexbox:1.1.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.3.1'
+    implementation 'com.google.android:flexbox:2.0.0'
     implementation 'com.reddit:indicator-fast-scroll:1.1.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
@@ -91,7 +91,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
     testImplementation 'junit:junit:4.13-beta-3'
-    testImplementation 'org.robolectric:robolectric:4.3-beta-1'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
