--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
-    ext.nav_version = '2.2.0-beta01'
-    ext.glide_version = '4.10.0'
+    ext.kotlin_version = '1.3.61'
+    ext.nav_version = '2.2.0'
+    ext.glide_version = '4.11.0'
     ext.arch_version = '1.1.1'
     ext.leakcanary_version = '2.0-beta-3'
     ext.coroutines_version = '1.2.0'
     ext.exoplayer_version = '2.10.4'
     ext.koin_version = '2.0.1'
-    ext.roomVersion = '2.2.0'
+    ext.roomVersion = '2.2.3'
     repositories {
         google()
         jcenter()
@@ -23,10 +23,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.31.0'
         classpath 'com.quinn.hunter:hunter-debug-plugin:0.9.5'
         classpath 'com.quinn.hunter:hunter-transform:0.9.3'
